--- a/React-Fundamentals/React-Components/Project-My-Components/my-components-with-create-react-app/src/components/Headers/WebsiteHeader/WebsiteHeader.css
+++ b/React-Fundamentals/React-Components/Project-My-Components/my-components-with-create-react-app/src/components/Headers/WebsiteHeader/WebsiteHeader.css
@@ -1,20 +1,13 @@
 
-.header-section {
-    top: 0;
-    left: 0;
-    padding: 20px 0;
-    width: 100%;
-    background-color: #0A2647;
-}
-
 .navbar {
-    position: fixed;
+    background-color: #333;
+    padding: 20px 0;
 }
 
-.nav-link, .navbar-brand {
+.navbar-brand, .nav-link {
     color: #fff;
 }
 
 .section {
-    padding: 2400px 0;
+    padding: 240px 0;
 }
