--- a/React-Fundamentals/React-Toolchains/nextjs/test-app-with-nextjs/src/app/components/Headers/WebsiteHeader.css
+++ b/React-Fundamentals/React-Toolchains/nextjs/test-app-with-nextjs/src/app/components/Headers/WebsiteHeader.css
@@ -17,5 +17,43 @@
 }
 
 .section {
-    padding: 80px 0;
+    padding: 100px 0;
+}
+
+.about-section {
+    margin-top: 80px;
+}
+
+.card-col {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.card {
+    margin: 10px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.1);
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+    height: 450px;
+    width: 100%;
+}
+
+.btn {
+    text-decoration: none;
+    background: #02343F;
+    color: #fff;
+    border: 2px solid #2c3e50;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 40px;
+    text-transform: uppercase;
+    font-size: 18px;
+    transition: 0.5 linear;
+}
+
+.btn:hover {
+    background: #2c3e50;
+    color: #fff;
 }
