--- a/React-Fundamentals/React-Toolchains/nextjs/test-app-with-nextjs/src/app/components/Headers/WebsiteHeader.css
+++ b/React-Fundamentals/React-Toolchains/nextjs/test-app-with-nextjs/src/app/components/Headers/WebsiteHeader.css
@@ -42,18 +42,20 @@
 
 .btn {
     text-decoration: none;
-    background: #02343F;
+    background-color: #02343F;
     color: #fff;
-    border: 2px solid #2c3e50;
-    padding: 10px;
+    /*border: 2px solid #2c3e50;*/
+    border: none;
+    padding: 10px 20px;
     margin: 10px 0;
     border-radius: 40px;
     text-transform: uppercase;
     font-size: 18px;
     transition: 0.5 linear;
+    cursor: pointer;
 }
 
 .btn:hover {
-    background: #2c3e50;
+    background-color: #0056b3;
     color: #fff;
 }
