--- a/React-Fundamentals/React-Toolchains/nextjs/test-app-with-nextjs/src/app/components/Headers/WebsiteHeader.css
+++ b/React-Fundamentals/React-Toolchains/nextjs/test-app-with-nextjs/src/app/components/Headers/WebsiteHeader.css
@@ -1,8 +1,12 @@
 
 
 .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: #333;
-    padding: 20px 0;
+    padding: 10px 20px;
+    color: #fff;
     /*font-size: 1.5em;*/
 }
 
@@ -10,10 +14,12 @@
     color: #fff;
     text-decoration: none;
     padding: 8px 16px;
+    margin: 0 10px;
 }
 
 .nav-link:hover {
     background-color: #555;
+    /*text-decoration: underline;*/
 }
 
 .section {
