--- a/React-Fundamentals/React-Toolchains/nextjs/test-app-with-nextjs/src/app/components/Common/About.css
+++ b/React-Fundamentals/React-Toolchains/nextjs/test-app-with-nextjs/src/app/components/Common/About.css
@@ -2,3 +2,23 @@ main {
     padding: 100px 0;
     background-color: #F1F6F9;
 }
+
+.btn {
+    text-decoration: none;
+    background-color: #02343F;
+    color: #fff;
+    /*border: 2px solid #2c3e50;*/
+    border: none;
+    padding: 10px 20px;
+    margin: 10px 0;
+    border-radius: 40px;
+    text-transform: uppercase;
+    font-size: 18px;
+    transition: 0.5 linear;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #0056b3;
+    color: #fff;
+}
