--- a/React-Fundamentals/React-Toolchains/nextjs/test-app-with-nextjs/src/app/components/Blog/Blog.css
+++ b/React-Fundamentals/React-Toolchains/nextjs/test-app-with-nextjs/src/app/components/Blog/Blog.css
@@ -3,6 +3,14 @@ section {
     padding: 40px 0;
 }
 
+.blog-border-line {
+    width: 180px;
+    height: 4px;
+    background: #3498db;
+    margin: auto;
+    margin-bottom: 40px;
+}
+
 .card-col {
     display: flex;
     flex-direction: column;
