--- a/React-Fundamentals/React-Toolchains/nextjs/test-app-with-nextjs/src/app/components/Common/ContactForm.css
+++ b/React-Fundamentals/React-Toolchains/nextjs/test-app-with-nextjs/src/app/components/Common/ContactForm.css
@@ -1,6 +1,53 @@
-form {
-    background-color: #333;
+.contact-form-section {
     text-align: center;
+    padding: 40px 0;
+}
+
+.contact-form-border {
+    width: 150px;
+    height: 10px;
+    background: #34495e;
+    margin: 10px auto;
+}
+
+.contact-form {
+    max-width: 600px;
+    margin: auto;
+    padding: 0 10px;
+}
+
+.contact-form-text {
+    display: block;
+    width: 100%;
+    margin: 16px 0;
+    border: 0;
+    background: #111;
+    padding: 20px 40px;
+    outline: none;
+    color: #ddd;
+    transition: 0.5s;
+}
+
+.contact-form-text:focus{
+  box-shadow: 0 0 10px 4px #34495e;
+}
+
+textarea.contact-form-text{
+  resize: none;
+  height: 120px;
+}
+
+.contact-form-btn {
+    float: right;
+    border: 0;
+    background: #34495e;
     color: #fff;
-    padding: 80px 0;
+    padding: 12px 50px;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.contact-form-btn:hover{
+  background: #2980b9;
 }
