--- a/React-Fundamentals/React-Toolchains/nextjs/test-app-with-nextjs/src/app/components/Common/Header.css
+++ b/React-Fundamentals/React-Toolchains/nextjs/test-app-with-nextjs/src/app/components/Common/Header.css
@@ -1,21 +1,27 @@
-.navbar {
-    display: flex;
-    justify-content: space-between;
+.navbar-section {
+    /*background-color: #333;*/
+    background-color: #f1f1f1;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
     align-items: center;
-    background-color: #333;
-    padding: 10px 20px;
-    color: #fff;
-    /*font-size: 1.5em;*/
 }
 
-.nav-link, .navbar-brand {
-    color: #fff;
+li a, div a {
     text-decoration: none;
-    padding: 8px 16px;
-    margin: 0 10px;
+    text-align: center;
+    padding: 14px 16px;
 }
 
-.nav-link:hover {
+li a:hover, div a:hover {
     background-color: #555;
-    /*text-decoration: underline;*/
+    text-decoration: underline;
+}
+
+.nav-item {
+    /*background-color: #f9f9f9;*/
+    /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
 }
