added footer component and modified global.css file

--- a/Building-React-Components-with-Next.js/website-with-next.js/src/app/globals.css
+++ b/Building-React-Components-with-Next.js/website-with-next.js/src/app/globals.css
@@ -19,13 +19,14 @@ nav {
 }
 
 .card {
-  margin: 10px;
+  margin: 10px 0;
   border-radius: 10px;
   box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
 }
 
 footer {
-  padding: 20px;
-  background-color: #333;
-  color: #fff;
+  padding: 10px 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.3);
+  height: 80px;
+  text-align: center;
 }
